force-app/main/default/objects/AccumulatorRule__c/AccumulatorRule__c.object-meta.xml
<CustomObject>
    <label>OLD Accumulator Rule</label>
    <nameField>
        <displayFormat>AR-{00000}</displayFormat>
        <label>Accumulator Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>old-Accumulator Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>