force-app/main/default/objects/AccumulatorRule__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contract</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You can only select Master Contracts</errorMessage>
        <filterItems>
            <field>Contract.FIN_ParentContract__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contract</referenceTo>
    <relationshipName>Accumulator_Rules</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>