force-app/main/default/objects/AccumulatorRule__c/fields/Starting_Number__c.field-meta.xml
<CustomField>
    <fullName>Starting_Number__c</fullName>
    <label>Starting Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>