force-app/main/default/objects/AccumulatorRule__c/fields/Starting_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Starting_Revenue__c</fullName>
    <label>Starting Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>