force-app/main/default/objects/AccumulatorRule__c/recordTypes/Revenue_Accumulator.recordType-meta.xml
<RecordType>
    <fullName>Revenue_Accumulator</fullName>
    <active>true</active>
    <label>Revenue Accumulator</label>
</RecordType>