force-app/main/default/objects/AccumulatorRule__c/recordTypes/Ticket_Accumulator.recordType-meta.xml
<RecordType>
    <fullName>Ticket_Accumulator</fullName>
    <active>true</active>
    <label>Ticket Accumulator</label>
</RecordType>